# chacha20-poly1305-stream

./: .gitignore  Cargo.toml  README.md
examples/: bench.rs  encrypt_and_decrypt.rs
src/: aead.rs  as_bytes.rs  chacha20.rs  lib.rs  poly1305.rs  simd.rs  simdop.rs  simdty.rs  stream_decryptor.rs  stream_encryptor.rs  stream_util.rs
src/simd_opt/: mod.rs  u32x4.rs
