[package]
name = "chacha20-poly1305-stream"
version = "0.1.0"
edition = "2021"
authors = ["Cesar Eduardo Barros <cesarb@cesarb.eti.br>", "Hatter Jiang <jht5945@gmail.com>"]
description = "A pure Rust implementation of the ChaCha20-Poly1305 AEAD from RFC 7539."
repository = "https://git.hatter.ink/hatter/chacha20-poly1305-stream"
readme = "README.md"
keywords = ["chacha20", "poly1305", "aead", "crypto"]
license = "MIT OR Apache-2.0"

[features]
bench = []
simd = []
simd_opt = ["simd"]
simd_asm = ["simd_opt"]

[dependencies]
constant_time_eq = "0.1.0"
clippy = { version = "0.0.37", optional = true }
